--- a/articles/spring-apps/basic-standard/toc.yml
+++ b/articles/spring-apps/basic-standard/toc.yml
@@ -25,17 +25,6 @@ items:
       href: ../migration/migrate-to-azure-container-apps-overview.md?toc=/azure/spring-apps/basic-standard/toc.json&bc=/azure/spring-apps/basic-standard/breadcrumb/toc.json
     - name: Provisioning
       href: ../migration/migrate-to-azure-container-apps-provision.md?toc=/azure/spring-apps/basic-standard/toc.json&bc=/azure/spring-apps/basic-standard/breadcrumb/toc.json
-    - name: Containerization
-      expanded: true
-      items:
-        - name: Overview
-          href: ../migration/migrate-to-azure-container-apps-build-overview.md?toc=/azure/spring-apps/basic-standard/toc.json&bc=/azure/spring-apps/basic-standard/breadcrumb/toc.json
-        - name: Build an image from artifacts
-          href: ../migration/migrate-to-azure-container-apps-build-artifacts.md?toc=/azure/spring-apps/basic-standard/toc.json&bc=/azure/spring-apps/basic-standard/breadcrumb/toc.json
-        - name: Build an image using Paketo
-          href: ../migration/migrate-to-azure-container-apps-build-buildpacks.md?toc=/azure/spring-apps/basic-standard/toc.json&bc=/azure/spring-apps/basic-standard/breadcrumb/toc.json
-        - name: Integrate with APM
-          href: ../migration/migrate-to-azure-container-apps-build-application-performance-monitoring.md?toc=/azure/spring-apps/basic-standard/toc.json&bc=/azure/spring-apps/basic-standard/breadcrumb/toc.json
     - name: Application
       expanded: true
       items:
@@ -60,6 +49,17 @@ items:
       href: ../migration/migrate-to-azure-container-apps-automation.md?toc=/azure/spring-apps/basic-standard/toc.json&bc=/azure/spring-apps/basic-standard/breadcrumb/toc.json
   - name: Migrate to Azure Kubernetes Service
     href: ../migration/migrate-to-aks-overview.md?toc=/azure/spring-apps/basic-standard/toc.json&bc=/azure/spring-apps/basic-standard/breadcrumb/toc.json
+  - name: App containerization
+    expanded: false
+    items:
+      - name: Overview
+        href: ../migration/migrate-to-azure-container-apps-build-overview.md?toc=/azure/spring-apps/basic-standard/toc.json&bc=/azure/spring-apps/basic-standard/breadcrumb/toc.json
+      - name: Build an image from artifacts
+        href: ../migration/migrate-to-azure-container-apps-build-artifacts.md?toc=/azure/spring-apps/basic-standard/toc.json&bc=/azure/spring-apps/basic-standard/breadcrumb/toc.json
+      - name: Build an image using Paketo
+        href: ../migration/migrate-to-azure-container-apps-build-buildpacks.md?toc=/azure/spring-apps/basic-standard/toc.json&bc=/azure/spring-apps/basic-standard/breadcrumb/toc.json
+      - name: Integrate with APM
+        href: ../migration/migrate-to-azure-container-apps-build-application-performance-monitoring.md?toc=/azure/spring-apps/basic-standard/toc.json&bc=/azure/spring-apps/basic-standard/breadcrumb/toc.json
 - name: Quickstarts
   expanded: true
   items:
