initial toc and index

--- a/articles/migration/index.yml
+++ b/articles/migration/index.yml
@@ -68,7 +68,7 @@ sections:
 
             - Comprehensive list of services, detailing their transition from another cloud provider to Azure, example scenarios, and best practices.
 
-            - eal-world examples and success stories of organizations that have successfully migrated to Azure, highlighting challenges faced, solutions implemented, and outcomes achieved.
+            - Real-world examples and success stories of organizations that have successfully migrated to Azure, highlighting challenges faced, solutions implemented, and outcomes achieved.
             
 # cards section (4)
   - componentType: grid
