--- a/articles/azure-functions/migration/toc.yml
+++ b/articles/azure-functions/migration/toc.yml
@@ -1,7 +1,7 @@
 - name: Overview
   href: ./function-placeholder.md
   items:
-  - name: Source service evaluation
+  - name: Evaluate - Source service
     href: ./function-placeholder.md
     items:
     - name: Governance
@@ -20,7 +20,7 @@
         href: ./function-placeholder.md
       - name: Example - Networking
         href: ./function-placeholder.md                  
-    - name: Current state
+    - name: Measurement - Current state
       items:
       - name: Cost of ownership
         href: ./function-placeholder.md
@@ -29,11 +29,15 @@
       - name: Performance targets 
         href: ./function-placeholder.md
     - name: Migration approach
-      items:  
+      items:     
       - name: Strategy and recommendations
-        href: ./function-placeholder.md      
+        href: ./function-placeholder.md         
       - name: Tools
-        href: ./function-placeholder.md      
+        href: ./function-placeholder.md
+      - name: Portability reference
+        href: ./function-placeholder.md                 
+    - name: Evaluation - Azure Functions
+      href: ./placeholder.md              
   - name: Scenario how-tos
     items:
     - name: Scenario - 1
@@ -56,5 +60,3 @@
         href: function-placeholder.md
       - name: End-state evaluation
         href: function-placeholder.md                 
-  - name: Workload migration, the bigger picture
-    href: https://learn.microsoft.com/en-us/azure/migration          
