initial toc and index

--- a/articles/azure-functions/migration/toc.yml
+++ b/articles/azure-functions/migration/toc.yml
@@ -58,4 +58,6 @@
       - name: Step-by-step process
         href: function-placeholder.md
       - name: End-state evaluation
-        href: function-placeholder.md                 
+        href: function-placeholder.md
+  - name: Azure optimization opportunities
+    href: ./placeholder.md                
