--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -511,7 +511,9 @@
         href: azure-stack-edge-contact-microsoft-support.md 
   - name: Shared release notes
     items:
-    - name: 2407 - Current
+    - name: 2501 - Current
+      href: azure-stack-edge-gpu-2501-release-notes.md
+    - name: 2407
       href: azure-stack-edge-gpu-2407-release-notes.md
     - name: 2403
       href: azure-stack-edge-gpu-2403-release-notes.md
