initial toc and index

--- a/articles/azure-functions/migration/toc.yml
+++ b/articles/azure-functions/migration/toc.yml
@@ -60,4 +60,4 @@
       - name: End-state evaluation
         href: function-placeholder.md
   - name: Azure optimization opportunities
-    href: ../migration/placeholder.md                
+    href: /azure/well-architected/service-guides/azure-functions-security
