--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -404,7 +404,7 @@
         items:
           - name: IoT Edge on VM
             href: azure-stack-edge-gpu-deploy-iot-edge-linux-vm.md
-          - name: Nvidia DeepStream module
+          - name: NVIDIA DeepStream module
             href: azure-stack-edge-deploy-nvidia-deepstream-module.md
       - name: Troubleshoot IoT Edge issues
         href: azure-stack-edge-gpu-troubleshoot-iot-edge.md
